<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.linm.lab1.MainActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/中山大学学生信息系统"
        android:textSize="20sp"
        android:textColor="#212121"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp" />

    <ImageView
        android:contentDescription="@mipmap/sysu"
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/sysu"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
      />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/学号"
        android:textSize="18sp"
        android:textColor="#212121"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintLeft_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/请输入学号"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:digits="0123456789"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintBaseline_toBaselineOf ="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/密码"
        android:textColor="#212121"
        android:textSize="18sp"
        android:layout_marginStart="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
         />

    <EditText
        android:id="@+id/editText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/请输入密码"
        android:inputType="textPassword"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="18sp"
        android:layout_marginRight="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintLeft_toRightOf="@+id/textView3"
        app:layout_constraintBaseline_toBaselineOf ="@+id/textView3"
        app:layout_constraintRight_toRightOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintTop_toBottomOf="@+id/editText"
        >

        <RadioButton
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/学生"
            android:checked="true"
            android:textSize="18sp" />

        <RadioButton

            android:id="@+id/radioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/教职工"
            android:textSize="18sp"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            app:layout_constraintLeft_toRightOf="@+id/button1" />

    </RadioGroup>

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5"
            >
        </android.support.constraint.Guideline>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/登陆"
        android:textColor="#E8EAF6"
        android:textSize="18sp"
        android:background="@drawable/newbutton"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="5dp"
        android:layout_marginRight="5dp"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintRight_toLeftOf="@+id/guideline"
        />



    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginLeft="5dp"
        android:background="@drawable/newbutton"
        android:text="@string/注册"
        android:textColor="#E8EAF6"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf ="@+id/button2"
        app:layout_constraintLeft_toRightOf="@+id/guideline"
        />


</android.support.constraint.ConstraintLayout>
